--- a/app.json
+++ b/app.json
@@ -5,6 +5,34 @@
       "bundler": "metro"
     },
     "name": "learning-app",
-    "slug": "learning-app"
+    "slug": "learning-app",
+    "plugins": [
+      [
+        "expo-barcode-scanner",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
+        }
+      ],
+      [
+        "expo-document-picker",
+        {
+          "iCloudContainerEnvironment": "Production"
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you pick QR code from gallery."
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "1058bf02-f997-4cd7-9715-1103ee695284"
+      }
+    },
+    "android": {
+      "package": "com.shubhamcpp.learningapp"
+    }
   }
 }
