--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "json-server --watch data.json --port 5000"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "^7.1.0",
+    "@react-native-community/netinfo": "^9.3.10",
+    "@rneui/base": "^4.0.0-rc.7",
     "expo": "^48.0.7",
+    "expo-barcode-scanner": "~12.3.2",
     "expo-constants": "~14.2.1",
+    "expo-document-picker": "~11.2.2",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
@@ -19,11 +29,20 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "json-server": "^0.17.3",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2"
   },
   "resolutions": {
     "metro": "^0.73.7",
