--- a/app.json
+++ b/app.json
@@ -24,6 +24,18 @@
         {
           "photosPermission": "The app accesses your photos to let you pick QR code from gallery."
         }
+      ],
+      [
+        "expo-contacts",
+        {
+          "contactsPermission": "Allow $(PRODUCT_NAME) to access your contacts."
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
       ]
     ],
     "extra": {
