--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "expo": "^48.0.7",
     "expo-barcode-scanner": "~12.3.2",
     "expo-constants": "~14.2.1",
+    "expo-contacts": "~12.0.1",
     "expo-document-picker": "~11.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
+    "expo-location": "~15.1.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
@@ -26,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
